# jsrt

./: .clang-format  .editorconfig  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  Dockerfile.claude  Dockerfile.dev  IMPLEMENTATION_REPORT.md  LICENSE  Makefile  README.md  WINDOWS_BUILD.md  build-msys2.sh  build-static-fixed.bat  debug_apis.js  debug_fetch.js  debug_ffi.js  debug_rsa_pss.js  debug_ubuntu_http.js  debug_url.js  demo_modules.sh  existing_test.txt  npm_compatibility_report.json  package-lock.json  package.json  setup-msys2.bat  test.bat  test_local.js  test_simple_redirect.mjs  tools.json  wintercg-api-roadmap.md
.claude/: AGENTS_SUMMARY.md  settings.local.json
.claude/agents/: code-review.md  jsrt-build-optimizer.md  jsrt-code-reviewer.md  jsrt-compliance.md  jsrt-cross-platform.md  jsrt-developer.md  jsrt-example-creator.md  jsrt-formatter.md  jsrt-memory-debugger.md  jsrt-module-developer.md  jsrt-parallel-coordinator.md  jsrt-quickjs-expert.md  jsrt-test-runner.md  jsrt-tester.md  jsrt-wintercg-compliance.md  jsrt-wpt-compliance.md  task-breakdown.md
.claude/commands/: code-review.md  do-plan.md  fix-wpt.md  plan.md  task-breakdown.md
.claude/docs/: architecture.md  contributing.md  debugging.md  modules.md  platform.md  testing.md  wpt.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  claude.yml  coverage.yml  format.yml  release.yml
docs/: PROCESS_API_COMPLETION_REPORT.md  README-addition.md  WPT.md  claude-agents.md  compact-node-implementation.md  debug-build-known-issues.md  debugging.md  dev-container-setup.md  ffi.md  fs-implementation-summary.md  http-module-loading-design.md  http-parser-llhttp-integration.md  module-hooks-lifecycle.md  module-hooks.md  module-system-api.md  module-system-architecture.md  module-system-migration.md  net-module-final-summary.md  net-test-fixes-2025-10-18.md  node-fs-compatibility-plan.md  nodejs-compatibility-layer.md  parallel-agents-guide.md  phase1-completion-report.md  test-failure-analysis-2025-10-18.md  test-fixes-achievement-100-percent.md  test-fixes-final-status-2025-10-18.md  test-fixes-summary-2025-10-18.md  troubleshooting-docker.md  wamr-integration-design.md  wasi-api.md  webassembly-api-compatibility.md  webcrypto-implementation-plan.md  windows-build-fixes.md  windows-static-build.md  wintercg-api-roadmap.md  wpt-compliance-plan.md  wpt-url-fix-summary.md
docs/api/: process.md
docs/migration/: node-process.md
docs/plan/: README-node-http.md  README.md  fs-execution-roadmap.md  fs-phase2-completion-plan.md  fs-phase2-execution-analysis.md  fs-remaining-atomic-tasks.md  fs-remaining-work-summary.md  http-implementation-summary.md  module-loader-plan.md  net-memory-leak-fix-plan.md  node-assert-plan.md  node-child-process-plan.md  node-compact-command-flag.md  node-constants-plan-phase3-complete.md  node-constants-plan.md  node-crypto-plan.md  node-dgram-plan.md  node-dns-plan.md  node-events-plan.md  node-fs-plan.md  node-http-plan.md  node-module-execution-strategy.md  node-module-parallel-batches.md  node-module-plan.md  node-net-fix-server-listen-hang.md  node-net-implementation-summary.md  node-net-plan.md  node-os-plan.md  node-path-plan.md  node-process-plan.md  node-querystring-plan.md  node-stream-execution-strategy.md  node-stream-phase1-review.md  node-stream-plan.md  node-tty-plan.md  node-url-plan.md  node-util-plan.md  node-wasi-plan.md  node-zlib-COMPLETION-SUMMARY.md  node-zlib-plan.md  (+12 more)
examples/: compact_node_example.js  compile_cache_demo.js  constants-demo.js  debug_async.js  demo_modules.sh  fetch_demo.js  fetch_network_demo.js  fetch_offline_demo.js  fetch_post_test.js  fetch_simple_network.js  fetch_working_test.js  ffi_demo.js  ffi_esm_test.mjs  https_demo.js  node_http_server.mjs  nodejs_compatibility_demo.js  npm_modules_demo.mjs  package.json  process_cwd_example.js  process_demo.js  simple_import.mjs  simple_module.mjs  test_dynamic_import.mjs  test_http_client.js  test_import.mjs  test_module.mjs  test_toplevel_await.mjs  throws_error.js  tty_demo.js  webassembly_demo.js
examples/child_process/: README.md  exec_example.js  spawn_advanced.js  spawn_basic.js  sync_example.js
examples/fetch/: fetch_demo.js  fetch_network_demo.js  fetch_offline_demo.js  fetch_post_test.js
examples/ffi/: ffi_esm_test.mjs
examples/module/: hooks-load.js  hooks-resolve.js  hooks-transform.js  register_hooks_demo.js
examples/modules/: advanced_http_modules.js  http_modules.js  npm_modules_demo.mjs  simple_import.mjs  simple_module.mjs
examples/node_compat/: hono_server.js  http_server.js  http_server.mjs  xss.html  xss.js
examples/node_wasi/: test.js
examples/popular_npm_packages/: README.md  (+3 more)
scripts/: build-static.bat  cleanup-submodules.sh  fix-libuv-windows.cmake  generate_coverage_badge.sh  generate_coverage_comment.sh  patch-libuv-windows.sh  post-build-windows.sh  pre-build-windows.sh  restore-libuv.sh  run-wpt.py  wpt-testharness.js
src/: build.c  build.h  jsrt.c  jsrt.h  jsrt.rs  main.c  main.rs  minimal_readline.c  minimal_readline.h  repl.c  repl.h  runtime.c  runtime.h
test/: README_EC_TESTS.md  README_builtin_modules_console.md  basic_rsa.js  commonjs_module.js  debug_aes.js  debug_aes_iv.js  debug_crypto_test.js  debug_digest_test.js  debug_readstring_error.js  debug_struct_error.js  https_support_manual.js  simple_rsa_test.js  test_abort.js  test_advanced_networking.js  test_assert_async.js  test_assert_deep_strict.js  test_assert_strict.mjs  test_assert_throws_enhanced.js  test_base64.js  test_blob.js  test_builtin_modules_console.js  test_clone.js  test_console.js  test_console_complete.js  test_crypto.js  test_empty.js  test_encoding.js  test_event.js  test_fetch.js  test_fetch_comprehensive.js  test_ffi_arrays.js  test_ffi_async.js  test_ffi_basic.js  test_ffi_basic.js.manual  test_ffi_callbacks.js  test_ffi_debug.js  test_ffi_enhanced.js  test_ffi_enhanced_errors.js  test_ffi_errors.js  test_ffi_structs.js  (+102 more)
test-cache/: version.txt
types/: module.d.ts
(+718 files in other folders)
